@@ -16,6 +16,7 @@ export(lang.iso)
 export(lat.lang)
 export(long.lang)
 export(map.feature)
+export(phoible.feature)
 export(url.lang)
 importFrom(MASS,bandwidth.nrd)
 importFrom(MASS,kde2d)
