@@ -1,0 +1,27 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/phoible.feature.R
+\name{phoible.feature}
+\alias{phoible.feature}
+\title{Download PHOIBLE data}
+\usage{
+phoible.feature(features = "all", source = "all", na.rm = TRUE,
+  glottolog.source = "modified")
+}
+\arguments{
+\item{features}{A character vector that define with a feature names from PHOIBLE (possible values: "all", "Phonemes", "Consonants", "Tones", "Vowels").}
+
+\item{source}{A character vector that define with a source names from PHOIBLE (possible values: "all", "AA", "GM", "PH", "RA", "SAPHON", "SPA", "UPSID").}
+
+\item{na.rm}{Logical. If TRUE function removes all languages not available in lingtypology. By default is TRUE.}
+
+\item{glottolog.source}{A character vector that define which glottolog database is used: 'original' or 'modified' (by default)}
+}
+\description{
+This function downloads data from PHOIBLE. You need the internet connection.
+}
+\examples{
+phoible.feature(c('Consonants', 'Vowels'), source = "UPSID")
+}
+\author{
+George Moroz <agricolamz@gmail.com>
+}
